--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
     "chart.js": "^4.4.9",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
