--- a/client/package.json
+++ b/client/package.json
@@ -14,13 +14,14 @@
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
     "chart.js": "^4.4.9",
-    "html2pdf.js": "^0.10.3",
+    "html2canvas-pro": "^1.5.10",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
+    "react-to-pdf": "^2.0.0",
     "react-toastify": "^11.0.5",
     "sweetalert2": "^11.17.2",
     "tailwindcss": "^4.1.3",
